# fastapi-starter-uv

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: app.py  config.py
src/common/: env.py  log.py
src/router/models/: response_dto.py
